<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright  2016 Andrious Solutions Ltd.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<PreferenceScreen
        android:key="application_preferences"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/interface_preferences">

        <CheckBoxPreference
                android:key="left_handed"
                android:title="@string/left_handed"
                android:summary="@string/summary_left_handed"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/notification_preferences">

        <PreferenceScreen
                android:key="notification_preferences"
                android:title="@string/notification_settings"
                android:summary="@string/summary_notification_preferences">

            <CheckBoxPreference
                    android:key="use_LED"
                    android:title="@string/use_LED"
                    android:summary="@string/summary_use_LED"
                    android:defaultValue="true"
                    />

            <PreferenceScreen
                    android:key="mLedArgb"
                    android:title="@string/colour_preference"
                    android:summary="@string/summary_colour_preference"
                    android:dependency="use_LED"
                    >
                <intent android:action="android.intent.action.VIEW"
                        android:targetPackage="com.gtfp.workingmemory"
                        android:targetClass="com.gtfp.workingmemory.colorPicker.colorPickerActivity"
                        />
            </PreferenceScreen>

            <RingtonePreference
                    android:key="sound_notification"
                    android:title="@string/notification_sound"
                    android:summary="@string/summary_notification_sound"
                    android:defaultValue="content://settings/system/notification_sound"
                    android:showSilent="true"
                    />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>

